# reinze-lib-runescape

./: Cargo.toml
.github/workflows/: deploy.yml
src/: alch.rs  bh.rs  bolts.rs  boost.rs  bosses.rs  clues.rs  collectionlog.rs  colosseum.rs  combat_est.rs  common.rs  database.rs  fairy.rs  ge.rs  grats.rs  gridmaster.rs  items.rs  leagues.rs  level.rs  lib.rs  lms.rs  money.rs  noburn.rs  npc.rs  params.rs  patch.rs  plant.rs  players.rs  prices.rs  pvparena.rs  rifts.rs  rsn.rs  salvage.rs  skill.rs  soulwars.rs  stats.rs  tog.rs  track.rs  wiki.rs  xp.rs
src/npc/: data.rs
src/stats/: agility.rs  construction.rs  cooking.rs  crafting.rs  farming.rs  firemaking.rs  fishing.rs  fletching.rs  herblore.rs  hunter.rs  magic.rs  mining.rs  prayer.rs  runecraft.rs  sailing.rs  skill.rs  smithing.rs  thieving.rs  woodcutting.rs
