[package]
name = "reinze-lib-runescape"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
common = { path = "../reinze-lib-common", package = "reinze-lib-common" }
meval = { git = "https://github.com/ryanwohara/meval-rs.git", branch = "main" }
mysql = "28"
regex = "1.12"
reqwest = { version = "0.13", features = ["json", "blocking"] }
rust-ini = "0.21"
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
itertools = "0.15"
log = "0.4"

[lib]
crate-type = ["dylib"]

